[package]
name = "client-network"
version = "0.6.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chain-core = { path = "../chain-core" }
chain-tx-validation = { path = "../chain-tx-validation" }
chain-storage = { path = "../chain-storage", default-features = false }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
secstr = { version = "0.4.0", features = ["serde"] }
base64 = "0.12"
chrono = { version = "0.4", features = ["serde"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
hex = "0.4.2"
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "535790e91fac1b3b00c770cb339a06feadc5f48d", features = ["recovery"] }
tendermint = { git = "https://github.com/crypto-com/tendermint-rs.git", default-features = false, rev = "e8d350960726b242fdaa67d293d71ba8cfdb8024" }

[dev-dependencies]
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "535790e91fac1b3b00c770cb339a06feadc5f48d", features = ["serde", "rand", "recovery", "endomorphism"] }
test-common = { path = "../test-common" }
