[package]
name = "client-rpc-core"
version = "0.5.3"
authors = ["Crypto.com <chain@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path= "../client-network"}

base64 = "0.11"
jsonrpc-core = "14.2"
jsonrpc-derive = "14.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"
hex = "0.4.2"
secstr = { version = "0.4.0", features = ["serde"] }
env_logger="0.7.1"
log ="0.4.8"
zeroize = "1.1"
parity-scale-codec = "1.3"

[features]
mock-enclave = []
