[package]
name = "client-rpc-core"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path= "../client-network"}

base64 = "0.12"
jsonrpc-core = "15.0"
jsonrpc-derive = "14.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
hex = "0.4.2"
secstr = { version = "0.4.0", features = ["serde"] }
env_logger="0.7.1"
log ="0.4.11"
zeroize = "1.1"
parity-scale-codec = "1.3"
tendermint-light-client = "0.15"

[features]
mock-enclave = ["client-common/mock-enclave"]
experimental = ["client-common/experimental", "client-core/experimental"]
