[package]
name = "cro-clib"
version = "0.5.0"
authors = ["jongwhan lee <jonghwan@crypto.com>"]
edition = "2018"

[lib]
name = "cro_clib"
crate-type = ["staticlib"]

[features]
mock-enclave = ["client-rpc-core/mock-enclave"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.53"
parity-scale-codec = { features = ["derive"], version = "1.3" }
hex="0.4.2"
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path = "../client-network" }
client-rpc-core = { path = "../client-rpc" }
secstr = { version = "0.4.0", features = ["serde"] }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["recovery", "endomorphism"] }
jsonrpc-core = "14.1"
libc = "0.2.71"

[build-dependencies]
cbindgen = "0.14.2"
