[package]
name = "cro-clib"
version = "0.6.0"
authors = ["jongwhan lee <jonghwan@crypto.com>"]
edition = "2018"

[lib]
name = "cro_clib"
crate-type = ["staticlib"]

[features]
mock-enclave = ["client-rpc-core/mock-enclave"]

[dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.57"
parity-scale-codec = { features = ["derive"], version = "1.3" }
hex="0.4.2"
chain-core = { path = "../chain-core" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path = "../client-network" }
client-rpc-core = { path = "../client-rpc" }
secstr = { version = "0.4.0", features = ["serde"] }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "984ccbccb48d62f5cb46f6fc1c75a04f34102987", features = ["recovery", "endomorphism"] }
jsonrpc-core = "14.2"
libc = "0.2.74"
env_logger = "0.7"

[build-dependencies]
cbindgen = "0.14.3"
