[package]
name = "dev-utils"
version = "0.5.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Basic CLI for development purposes (e.g. generation of genesis.json parameters)"
edition = "2018"

[dependencies]
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path = "../client-network" }
chain-core = { path = "../chain-core/" }
chain-abci = { path = "../chain-abci/" }
test-common = { path = "../test-common" }
structopt = "0.3"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
kvdb-memorydb = "0.6"
dirs = "2.0.1"
quest = "0.3"
secstr = "0.4.0"
parity-scale-codec = { version = "1.3" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "f8759809f6e3fed793b37166f7cd91c57cdb2eab", features = ["recovery", "endomorphism"] }

[features]
mock-enclave = ["chain-abci/mock-enclave"]


