[package]
name = "dev-utils"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Basic CLI for development purposes (e.g. generation of genesis.json parameters)"
edition = "2018"

[dependencies]
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
client-network = { path = "../client-network" }
chain-core = { path = "../chain-core/" }
chain-abci = { path = "../chain-abci/" }
test-common = { path = "../test-common" }
structopt = "0.3"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
kvdb-memorydb = "0.7"
dirs = "3.0.1"
quest = "0.3"
secstr = "0.4.0"
parity-scale-codec = { version = "2.0" }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["recovery", "endomorphism", "schnorrsig", "global-context"] }
base64 = "0.13"
mls = { path = "../chain-tx-enclave-next/mls" }
ra-client = { path = "../chain-tx-enclave-next/enclave-ra/ra-client" }

[features]
mock-enclave = ["chain-abci/mock-enclave", "client-common/mock-enclave"]
