
[package]
name = "enclave-protocol"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Requests and responses exchanges over ZMQ between chain-abci app "
readme = "../README.md"
edition = "2018"

[features]
default = ["chain-core/default"]
edp = ["chain-core/edp", "parity-scale-codec/std", "secp256k1/lowmemory"]

[dependencies]
chain-core = { path = "../chain-core", default-features = false }
chain-tx-validation = { path = "../chain-tx-validation", default-features = false }
parity-scale-codec = { version = "1.3", features = ["derive"] }
blake3 = { version = "0.3.7", default-features = false }
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a" }
