[package]
name = "sgx-wrapper"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enclave-macro = { path = "../chain-tx-enclave/enclave-macro" }
parity-scale-codec = { version = "1.1", default-features=false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
zeroize = { version = "1.0", default-features = false, features = ["zeroize_derive"] }
httparse    = { version = "1.3.2", default-features = false }
bit-vec     = { version = "0.6.1", default-features = false}
rand = { version = "0.7", optional = true }
hex = { version = "0.4", optional = true }

sgx_types   = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd    = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net"], optional=true }
sgx_tseal   = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true }
sgx_rand    = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true }
sgx_tcrypto = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true }
sgx_tse = { rev = "v1.1.0", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true }

webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx", optional=true }
webpki-roots = { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx", optional=true}
base64      = { git = "https://github.com/mesalock-linux/rust-base64-sgx", optional=true}
yasna       = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"], optional=true}
num-bigint  = { git = "https://github.com/mesalock-linux/num-bigint-sgx", optional=true}
chrono      = { git = "https://github.com/mesalock-linux/chrono-sgx", optional=true }

rustls-sgx  = { git = "https://github.com/mesalock-linux/rustls", branch = "mesalock_sgx", package="rustls", optional=true }
rustls = { version = "0.16", optional=true }

[dev-dependencies]
quickcheck = "0.9"

[features]
mesalock_sgx = ["enclave-macro/mesalock_sgx", "sgx_tstd", "sgx_tseal", "sgx_rand", "sgx_tcrypto", "sgx_tse", "rustls-sgx", "webpki", "webpki-roots", "base64", "yasna", "num-bigint", "chrono" ]
default = ["parity-scale-codec/derive", "rand", "rustls", "bit-vec/std", "hex"]
