[package]
name = "signer-core"
version = "0.1.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core/" }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "bfaa5cb476b535da88410b13b3ee982c87e0b64c", features = ["serde", "zeroize", "rand"] }
rand = "0.6"
failure = "0.1"
zeroize = "0.6"
serde = { version = "1.0", features = ["derive"] }
hex = "0.3"
unicase = "2.2"
sled = "0.23"
bincode = "1.1"
miscreant = "^0.4.2"
blake2 = "0.8"
