[package]
name = "signer-rpc"
version = "0.1.0"
authors = ["Devashish Dixit <devashish@crypto.com>"]
edition = "2018"

[dependencies]
chain-core = { path = "../chain-core/" }
signer-core = { path = "../signer-core/" }
serde = { version = "1.0", features = ["derive"] }
jsonrpc-http-server = "11.0"
jsonrpc-derive = "10.1"
structopt = "0.2"
failure = "0.1"
quest = "0.3"
hex = "0.3"
zeroize = "0.6"
parity-codec = "3.5.1"
parity-codec-derive = "3.3.0"

# will be removed once client-* has all signer-* functionality
[badges]
maintenance = { status = "deprecated" }