[package]
name = "test-common"
version = "0.4.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = { version = "0.8", default-features = false }
signatory = { version = "0.18", features = ["ed25519", "ecdsa"] }
signatory-dalek = "0.18"
serde_json = { version = "1.0" }
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
secstr = { version = "0.4.0", features = ["serde"] }
lazy_static  = { version = "1.4", features = ["spin_no_std"] }
signature = "1.0.0-pre.1"
abci = "0.7"
kvdb-memorydb = "0.5"
protobuf = "2.7.0"
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "745bc8d8dc80cb921d5788e863a3536d3b6498a1", features = ["recovery", "endomorphism"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
base64 = "0.11"
hex = "0.4"

tendermint = { git = "https://github.com/crypto-com/tendermint-rs.git", default-features = false, rev = "e3c131a35936da7fc1928c3231db70e603f82fd3" }
chain-core = { path = "../chain-core" }
chain-abci = { path = "../chain-abci" }
chain-storage = { path = "../chain-storage" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
