[package]
name = "test-common"
version = "0.6.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = { version = "0.9", default-features = false }
signatory = { version = "0.20", features = ["ed25519", "ecdsa"] }
signatory-dalek = "0.20"
serde_json = { version = "1.0" }
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
secstr = { version = "0.4.0", features = ["serde"] }
lazy_static  = { version = "1.4", features = ["spin_no_std"] }
signature = "1.1"
abci = "0.7"
kvdb-memorydb = "0.7"
protobuf = "2.7.0"
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "535790e91fac1b3b00c770cb339a06feadc5f48d", features = ["recovery", "endomorphism", "schnorrsig"] }
parity-scale-codec = { features = ["derive"], version = "1.3" }
base64 = "0.12"
hex = "0.4"

tendermint = { git = "https://github.com/crypto-com/tendermint-rs.git", default-features = false, rev = "ceca4219d6ae4e4ce906a6579e865af15458fdd6" }
chain-core = { path = "../chain-core" }
chain-abci = { path = "../chain-abci" }
chain-storage = { path = "../chain-storage" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
