[package]
name = "test-common"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
edition = "2018"

[dependencies]
sha2 = { version = "0.9", default-features = false }
signatory = { version = "0.20", features = ["ed25519", "ecdsa"] }
signatory-dalek = "0.20"
serde_json = { version = "1.0" }
subtle = "2"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
secstr = { version = "0.4.0", features = ["serde"] }
lazy_static  = { version = "1.4", features = ["spin_no_std"] }
signature = "1.1"
abci = { version = "0.7", git = "https://github.com/crypto-com/rust-abci.git", rev = "d7e007cea9179d560f9d51075525a9cc9449a808" }
kvdb-memorydb = "0.7"
protobuf = "2.16.2"
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["recovery", "endomorphism", "schnorrsig", "global-context"] }
parity-scale-codec = { features = ["derive"], version = "2.0" }
base64 = "0.13"
hex = "0.4"

tendermint = "0.15"
tendermint-rpc = "0.15"
tendermint-light-client = "0.15"
chain-core = { path = "../chain-core" }
chain-abci = { path = "../chain-abci" }
chain-storage = { path = "../chain-storage" }
client-common = { path = "../client-common" }
client-core = { path = "../client-core" }
mls = { path = "../chain-tx-enclave-next/mls" }
