[package]
name = "tx-validation-enclave-app"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Application server wrapper with the transaction validation enclave."
readme = "../../README.md"
edition = "2018"
	
[dependencies]
abci-enclave-protocol = { path = "../protocol" }
integer-encoding = "1.0.5"
bincode = "1.1"
serde = "1.0"
serde_derive = "1.0"