[package]
name = "abci-enclave-protocol"
version = "0.1.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "A subset of ABCI forwarded to enclaves"
readme = "../../README.md"
edition = "2018"

[dependencies]
bincode = "1.1"
chain-core = { path = "../../chain-core" }
integer-encoding = "1.0.5"
serde = "1.0"
serde_derive = "1.0" 