[package]
name = "enclave-utils"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Platform independent enclave utilities (sealing, attestation primitives...)."
readme = "../../README.md"
edition = "2018"

[dependencies]
sgx-isa = "0.3"
aes-gcm = "0.8"
aead = "0.3"
zeroize = "1.2"
rand = "0.8"
log = "0.4"
rustls = "0.19"
webpki = "0.21"
chrono = "0.4"
ra-client = { path = "../enclave-ra/ra-client" }
ra-enclave = { path = "../enclave-ra/ra-enclave" }

[features]
sgxstd = ["sgx-isa/sgxstd"]
