[package]
name = "mls"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Implements the mls protocol used in TDBE"
readme = "../../README.md"
edition = "2018"

[dependencies]
ring = "0.16"
thiserror = "1.0"
rustls = "0.18"
x509-parser = "0.8.0-beta3"
sha2 = "0.8.1"
hkdf = "0.8"
secrecy = "0.7.0"
hpke = "0.1.5"
aead = "0.2.0"
rand = "0.7"
chrono="0.4.13"
ra-client = { path = "../enclave-ra/ra-client" }
subtle = "2.2.3"

[dev-dependencies]
chrono = "0.4"

[target.'cfg(target_env = "sgx")'.dependencies]
ra-enclave = { path = "../enclave-ra/ra-enclave" }
rs-libc = "0.2"

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x40000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x20000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=1
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true
