[package]
name = "mls"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Implements the mls protocol used in TDBE"
readme = "../../README.md"
edition = "2018"

[dependencies]
ring = { version = "0.16.15", features = ["std"] }
thiserror = "1.0"
rustls = "0.18"
x509-parser = "0.8.0"
nom = "5.1"
secrecy = "0.7.0"
sha2 = "0.9"
hkdf = { version = "0.9", features = ["std"] }
hpke = { version = "0.3.1", default-features = false, features = ["p256", "std"] }
aead = { version = "0.3", features = ["std"] }
rand = "0.7"
chrono="0.4.17"
ra-client = { path = "../enclave-ra/ra-client" }
subtle = "2.3.0"
chain-util = { path = "../../chain-util" }
elliptic-curve = "0.5.0"
p256 = { version = "0.4.1", features = ["arithmetic", "zeroize"] }
zeroize = "1.1"
parity-scale-codec = { features = ["derive"], version = "1.3" }
once_cell = "1.4"
generic-array = "0.14"
static_assertions = "1.1"

[dev-dependencies]
chrono = "0.4"
assert_matches = "1.3"

[target.'cfg(target_env = "sgx")'.dependencies]
ra-enclave = { path = "../enclave-ra/ra-enclave" }
rs-libc = "0.2"

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x40000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x20000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=1
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true
