[package]
name = "tx-validation-next"
version = "0.6.0"
authors = ["Crypto.com <chain@crypto.com>"]
description = "The transaction validation enclave."
readme = "../../README.md"
edition = "2018"

[target.'cfg(target_env = "sgx")'.dependencies]
enclave-macro = { path = "../../chain-tx-enclave/enclave-macro" }
chain-tx-validation   = {  path = "../../chain-tx-validation" }
chain-core   = {  path = "../../chain-core" }
# TODO: "rand" feature may only be dev-dependency / needed for tests
secp256k1 = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", rev = "1aae6edc5f1de0bbdcdb26f1f1d8b00ca28e012a", features = ["recovery", "endomorphism", "lowmemory", "schnorrsig", "rand", "global-context"] }
parity-scale-codec = { version = "1.3" }
enclave-protocol   = { path = "../../enclave-protocol" }
chain-tx-filter   = { path = "../../chain-tx-filter" }
aes-gcm-siv = "0.5"
aead = "0.3"
chrono = "0.4"
zeroize = { version = "1.1" }
env_logger = { version = "0.7", default-features = false }
log = "0.4"
rs-libc = "0.2"
rand = "0.7"
enclave-utils = { path = "../enclave-utils", features = ["sgxstd"] }
ra-enclave = { path = "../enclave-ra/ra-enclave" }
ra-client = { path = "../enclave-ra/ra-client" }
sgx-isa = { version = "0.3", features = ["sgxstd"] }

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x40000
# heap size (in bytes), the default heap size is 0x2000000.
heap-size=0x20000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=2
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true
