[package]
name = "enclave-t-common"
version = "0.1.1"
authors = ["Crypto.com <chain@crypto.com>"]
description = "Trusted enclave-related code."
readme = "../../README.md"
edition = "2018"

[dependencies]
sgx_tstd    = { rev = "5b5e512abbbfc3030e8cb274989fb372b685b168", git = "https://github.com/baidu/rust-sgx-sdk.git" }
chain-core   = { path = "../../chain-core", default-features = false, features = ["mesalock_sgx"] }
secp256k1zkp = { git = "https://github.com/crypto-com/rust-secp256k1-zkp.git", default-features = false, rev = "be445f29a96af31fe079611d26c07f1f596d1c5f", features = ["recovery", "endomorphism", "sgx"] }
zeroize = { version = "1.0", default-features = false }
sgx_tseal     = { rev = "5b5e512abbbfc3030e8cb274989fb372b685b168", git = "https://github.com/baidu/rust-sgx-sdk" }
parity-scale-codec = { default-features = false, version = "1.0" }
sgx_types   = { rev = "5b5e512abbbfc3030e8cb274989fb372b685b168", git = "https://github.com/baidu/rust-sgx-sdk.git" }
